<resources>

    <string name="text_add_portfolio_title">Connect Wallet / Exchange</string>
    <string name="text_add_portfolio_subtitle">Connect your crypto platforms and manage all your assets together now.</string>
    <string name="text_exchange_crypto_com">Crypto.com app</string>
    <string name="permission_read_external_storage">Please grant Read External Storage permission, to browse and select .csv file.</string>
    <string name="grant_permissions">Grant</string>

    <string name="asset_details_tab_info">Coin Info</string>
    <string name="asset_details_tab_transactions">Transactions</string>


    <string name="text_total_holdings">Total Holdings</string>
    <string name="placeholder_total_holdings">%f %s</string>
    <string name="text_total_worth">Total Worth</string>
    <string name="placeholder_total_worth">%f %s</string>
    <string name="placeholder_total_and_average_buy">Buy %f %s (Avg. Buy %f %s)</string>
    <string name="placeholder_total_and_average_sell">Sell %f %s (Avg. Sell %f %s)</string>
    <string name="placeholder_total_interest_earn">Total Interest Earn: %f %s (%f %s)</string>
    <string name="placeholder_total_reward">Total Reward: %f %s (%f %s)</string>


    <string name="item_asset_transaction_header_interest_earn">Interest Earn %f</string>
    <string name="item_asset_transaction_header_reward">Reward %f</string>


    <string name="ui_transaction_type_buy">Buy</string>
    <string name="ui_transaction_type_sell">Sell</string>
    <string name="ui_transaction_type_interest_earn">Interest Earn</string>
    <string name="ui_transaction_type_stake_reward">Reward</string>

</resources>
